crux-mir/test/symb_eval/num/checked_shift.good
test checked_shift/<DISAMB>::crux_test[0]: returned 0, [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- checked_shift/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_shift.rs:6:5: 6:15: error: in checked_shift/<DISAMB>::crux_test[0]
[Crux]   attempt to shift left by `const 64_i64`, which would overflow
[Crux]   Context:
[Crux]     test/symb_eval/num/checked_shift.rs:6:5: 6:15: checked_shift/<DISAMB>::crux_test[0]
[Crux]     internal: _start

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
